Bug 1556427 - Add node.title to bookmarks.onRemoved event r=Standard8,willdurand,markh

The `bookmarks.onRemoved` event should have a `title` attribute
reflecting the title of the removed bookmark. This behavior is
documented in an example at:
https://developer.mozilla.org/en-US/docs/Mozilla/Add-ons/WebExtensions/API/bookmarks/onRemoved

That documented example was reportedly broken: https://github.com/mdn/content/issues/13052

Differential Revision: https://phabricator.services.mozilla.com/D139293